--- a/Section 6- Compose/section6-vidly/vidly/_docker-compose.yml
+++ b/Section 6- Compose/section6-vidly/vidly/_docker-compose.yml
@@ -1,16 +1,23 @@
 version: '3.8'
 
 services:
-  web:
+  frontend:
+    depends_on:
+      - backend
     build: ./frontend
     ports:
       - 3000:3000
-  api:
+
+  backend:
+    depends_on:
+      - db
     build: ./backend
     ports:
       - 3001:3001
     environment:
       DB_URL: mongodb://db/vidly
+    command: ./docker-entrypoint.sh
+
   db:
     image: mongo:4.0-xenial
     ports:
